--- a/tests/tfm_sp/tfm_huk_deriv_srv/prj.conf
+++ b/tests/tfm_sp/tfm_huk_deriv_srv/prj.conf
@@ -1,6 +1,6 @@
 CONFIG_ZTEST=y
 CONFIG_ZTEST_NEW_API=y
-CONFIG_ZTEST_MOCKING=y
+CONFIG_TEST_EXTRA_STACK_SIZE=1024
 
 # TF-M
 CONFIG_BUILD_WITH_TFM=y
